--- a/ThemePark/Web.config
+++ b/ThemePark/Web.config
@@ -16,12 +16,27 @@
   </appSettings>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-ridereview-20160710162620;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-ridereview-20160710162620.mdf" providerName="System.Data.SqlClient" />
+    <add name="ReviewSqlDatabase" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\review.mdf;Integrated Security=True" providerName="System.Data.SqlClient"/>
     <add name="reviewConnectionString" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=&quot;C:\Users\Moody\Dropbox\Docs\MSCS\2016 Summer\Enterprise WebApp Dev 6176\Final Project\review.mdf&quot;;Integrated Security=True;Connect Timeout=30" providerName="System.Data.SqlClient" />
     <add name="LocalSQL mdf string" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\review.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="ParksNavigationData" connectionString="metadata=res://*/Models.ParksDBModel.csdl|res://*/Models.ParksDBModel.ssdl|res://*/Models.ParksDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\review.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ReviewEntities" connectionString="metadata=res://*/App_Code.ReviewModel.csdl|res://*/App_Code.ReviewModel.ssdl|res://*/App_Code.ReviewModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\review.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
   </connectionStrings>
   <system.web>
-    <compilation debug="true" targetFramework="4.5" />
+    <compilation debug="true" targetFramework="4.5">
+      <assemblies>
+        <add assembly="System.Security, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
+        <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"/>
+        <add assembly="System.Data.Entity.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"/>
+        <add assembly="System.Spatial, Version=5.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+        <add assembly="Microsoft.Data.Edm, Version=5.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+        <add assembly="Microsoft.Data.OData, Version=5.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+        <add assembly="System.Data.Services.Client, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
+      </assemblies>
+      <buildProviders>
+        <add extension=".edmx" type="System.Data.Entity.Design.AspNet.EntityDesignerBuildProvider"/>
+      </buildProviders>
+    </compilation>
     <httpRuntime targetFramework="4.5" />
     <pages>
       <namespaces>
@@ -31,6 +46,29 @@
         <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
       </controls>
     </pages>
+    <membership>
+      <providers>
+        <clear/>
+        <add name="AspNetSqlMembershipProvider"
+             applicationName="Review"
+             type="System.Web.Security.SqlMembershipProvider, System.Web, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a"
+             connectionStringName="ReviewSqlDatabase"
+             enablePasswordRetrieval="false"
+             enablePasswordReset="true"
+             requiresQuestionAndAnswer="false"
+             requiresUniqueEmail="true"
+             passwordFormat="Hashed"
+             minRequiredNonalphanumericCharacters="0"
+             minRequiredPasswordLength="5"
+             maxInvalidPasswordAttempts="5"/>
+      </providers>
+    </membership>
+    <roleManager enabled="true" defaultProvider="AspNetSqlRoleProvider">
+      <providers>
+        <clear/>
+        <add connectionStringName="ReviewSqlDatabase" applicationName="Review" name="AspNetSqlRoleProvider" type="System.Web.Security.SqlRoleProvider"/>
+      </providers>
+    </roleManager>
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" defaultUrl="~/" />
     </authentication>
