--- a/ThemePark/packages.config
+++ b/ThemePark/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AjaxControlToolkit" version="16.1.0.0" targetFramework="net45" />
   <package id="AspNet.ScriptManager.jQuery" version="1.8.2" targetFramework="net45" />
+  <package id="AspNet.ScriptManager.jQuery" version="3.0.0" targetFramework="net45" />
   <package id="AspNet.ScriptManager.jQuery.UI.Combined" version="1.8.24" targetFramework="net45" />
   <package id="DotNetOpenAuth.AspNet" version="4.1.4.12333" targetFramework="net45" />
   <package id="DotNetOpenAuth.Core" version="4.1.4.12333" targetFramework="net45" />
@@ -9,7 +11,9 @@
   <package id="DotNetOpenAuth.OpenId.Core" version="4.1.4.12333" targetFramework="net45" />
   <package id="DotNetOpenAuth.OpenId.RelyingParty" version="4.1.4.12333" targetFramework="net45" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
+  <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
   <package id="jQuery" version="1.8.2" targetFramework="net45" />
+  <package id="jQuery" version="3.0.0.1" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.8.24" targetFramework="net45" />
   <package id="Microsoft.AspNet.FriendlyUrls" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.FriendlyUrls.Core" version="1.0.0" targetFramework="net45" />
@@ -20,7 +24,12 @@
   <package id="Microsoft.AspNet.ScriptManager.WebForms" version="4.5.6" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization.WebForms" version="1.0.0" targetFramework="net45" />
+  <package id="Microsoft.Data.Edm" version="5.7.0" targetFramework="net45" />
+  <package id="Microsoft.Data.OData" version="5.7.0" targetFramework="net45" />
+  <package id="Microsoft.Data.Services" version="5.7.0" targetFramework="net45" />
+  <package id="Microsoft.Data.Services.Client" version="5.7.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
+  <package id="System.Spatial" version="5.7.0" targetFramework="net45" />
   <package id="WebGrease" version="1.1.0" targetFramework="net45" />
 </packages>
